<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:orientation="vertical"
   android:padding="7dp"
   tools:context="com.gameofcoding.fontgenerator.activities.ConfigFontActivity">
   <TextView
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  android:textAppearance="?android:attr/textAppearanceMedium"
	  android:text="@string/label_font_name"/>
   <EditText
	  android:id="@+id/ed_font_name"
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content"
	  android:inputType="textPersonName"/>
   <LinearLayout
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content"
	  android:orientation="horizontal">
	  <LinearLayout
		 android:layout_width="0dp"
		 android:layout_height="match_parent"
		 android:layout_weight="1"
		 android:layout_marginRight="7dp"
		 android:orientation="vertical">
		 <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/label_font_size"/>
		 <LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<EditText
			   android:id="@+id/ed_font_size"
			   android:layout_width="0dp"
			   android:layout_weight="1"
			   android:layout_height="wrap_content"
			   android:inputType="number"/>
			<TextView
			   android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			   android:text="px"/>
		 </LinearLayout>
	  </LinearLayout>
	  <LinearLayout
		 android:layout_width="0dp"
		 android:layout_height="match_parent"
		 android:layout_weight="1"
		 android:orientation="vertical">
		 <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/label_page_size"/>
		 <LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<EditText
			   android:id="@+id/ed_page_size"
			   android:layout_width="0dp"
			   android:layout_height="wrap_content"
			   android:layout_weight="1"
			   android:inputType="number"/>
			<TextView
			   android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			   android:text="px"/>
		 </LinearLayout>
	  </LinearLayout>
   </LinearLayout>
	  <Button
		 android:id="@+id/btn_select_dest_dir"
		 android:layout_width="match_parent"
		 android:layout_height="wrap_content"
		 android:text="@string/label_dest_dir"/>
	  <TextView
		 android:id="@+id/tv_dest_dir"
		 android:layout_width="match_parent"
		 android:layout_height="wrap_content"
		 android:gravity="center_horizontal"
		 android:textAppearance="?android:attr/textAppearanceMedium"
		 android:text="@string/label_no_file_selected"/>
   <Button
	  android:id="@+id/btn_generate_font"
	  style="?android:attr/buttonStyleSmall"
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content"
	  android:text="@string/label_generate"/>
</LinearLayout>
