<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:orientation="vertical">
   <LinearLayout
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content">
	  <ImageView
		 android:layout_width="42dp"
		 android:layout_height="42dp"
		 android:layout_marginLeft="7dp"
		 android:src="@drawable/ic_arrow_up"/>
	  <TextView
		 android:id="@+id/tv_go_up"
		 android:layout_width="0dp"
		 android:layout_height="match_parent"
		 android:layout_weight="1"
		 android:background="?android:attr/selectableItemBackground"
		 android:focusable="true"
		 android:gravity="center_vertical"
		 android:text="@string/go_up"/>
   </LinearLayout>
   <ListView
	  android:id="@+id/list_view"
	  android:layout_width="match_parent"
	  android:layout_height="0dp"
	  android:layout_weight="1"/>
   <TextView
	  android:id="@+id/tv_empty_directory"
	  android:layout_width="match_parent"
	  android:layout_height="0dp"
	  android:layout_weight="1"
	  android:gravity="center"
	  android:text="@string/empty_directory"
	  android:textAppearance="?android:attr/textAppearanceMedium"
	  android:visibility="gone"/>
   <LinearLayout
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content"
	  android:gravity="end">
	  <Button
		 style="?android:attr/buttonBarButtonStyle"
		 android:id="@+id/btn_cancel"
		 android:layout_width="wrap_content"
		 android:layout_height="wrap_content"
		 android:text="@string/cancel"/>
	  <View
		 android:id="@+id/view_btn_space"
		 android:layout_width="0dp"
		 android:layout_height="1dp"
		 android:layout_weight="1"/>
	  <Button
		 style="?android:attr/buttonBarButtonStyle"
		 android:id="@+id/btn_ok"
		 android:layout_width="wrap_content"
		 android:layout_height="wrap_content"
		 android:text="@string/ok"/>
   </LinearLayout>
</LinearLayout>
