<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:gravity="center_vertical"
   android:paddingTop="7dp"
   android:paddingBottom="7dp"
   android:paddingLeft="14dp"
   android:paddingRight="14dp"
   android:orientation="vertical">
   
	  <EditText
		 android:id="@+id/ed_color"
		 android:layout_width="wrap_content"
		 android:layout_height="wrap_content"
		 android:layout_gravity="center_horizontal"
		 android:ems="10"
		 android:hint="@string/color"
		 android:inputType="textPersonName"/>
   <LinearLayout
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content">
	  <TextView
		 android:layout_width="0dp"
		 android:layout_height="wrap_content"
		 android:layout_weight="1"
		 android:gravity="start"
		 android:text="@string/alpha"/>
	  <TextView
		 android:id="@+id/tv_alpha"
		 android:layout_width="0dp"
		 android:layout_height="wrap_content"
		 android:layout_weight="1"
		 android:gravity="end"/>
   </LinearLayout>
   <SeekBar
	  android:id="@+id/sb_alpha"
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content"
	  android:max="255"/>
   <LinearLayout
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content">
	  <TextView
		 android:layout_width="0dp"
		 android:layout_height="wrap_content"
		 android:layout_weight="1"
		 android:gravity="start"
		 android:textColor="#ff0000"
		 android:text="@string/red"/>
	  <TextView
		 android:id="@+id/tv_red"
		 android:layout_width="0dp"
		 android:layout_height="wrap_content"
		 android:layout_weight="1"
		 android:gravity="end"/>
   </LinearLayout>
   <SeekBar
	  android:id="@+id/sb_red"
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content"
	  android:max="255"/>
   <LinearLayout
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content">
	  <TextView
		 android:layout_width="0dp"
		 android:layout_height="wrap_content"
		 android:layout_weight="1"
		 android:gravity="start"
		 android:textColor="#00ff00"
		 android:text="@string/green"/>
	  <TextView
		 android:id="@+id/tv_green"
		 android:layout_width="0dp"
		 android:layout_height="wrap_content"
		 android:layout_weight="1"
		 android:gravity="end"/>
   </LinearLayout>
   <SeekBar
	  android:id="@+id/sb_green"
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content"
	  android:max="255"/>
   <LinearLayout
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content">
	  <TextView
		 android:layout_width="0dp"
		 android:layout_height="wrap_content"
		 android:layout_weight="1"
		 android:gravity="start"
		 android:textColor="#0000ff"
		 android:text="@string/blue"/>
	  <TextView
		 android:id="@+id/tv_blue"
		 android:layout_width="0dp"
		 android:layout_height="wrap_content"
		 android:layout_weight="1"
		 android:gravity="end"/>
   </LinearLayout>
   <SeekBar
	  android:id="@+id/sb_blue"
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content"
	  android:max="255"/>
   <LinearLayout
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content"
	  android:gravity="end">
	  <View
		 android:id="@+id/view_btn_space"
		 android:layout_width="0dp"
		 android:layout_height="1dp"
		 android:layout_weight="1"/>
	  <Button
		 style="?android:attr/buttonBarButtonStyle"
		 android:id="@+id/btn_cancel"
		 android:layout_width="wrap_content"
		 android:layout_height="wrap_content"
		 android:text="@string/cancel"/>
	  <Button
		 style="?android:attr/buttonBarButtonStyle"
		 android:id="@+id/btn_ok"
		 android:layout_width="wrap_content"
		 android:layout_height="wrap_content"
		 android:text="@string/ok"/>
   </LinearLayout>
</LinearLayout>

